# GraphicsProject

./: GraphicsProject.sln
Debug/: GraphicsProject.ilk
GraphicsProject/: 0basketball.mtl  CMakeLists.txt  Car1.blend  Car1.blend1  Controls.h  DrawnModel.h  GraphicsProject.vcxproj  GraphicsProject.vcxproj.filters  Image.mtl  Model.h  OFF-Roadcar.mtl  Plate.blend  Plate.mtl  Shader.h  Source.cpp  StandardShading.fragmentshader  Texture.h  ball.rar  car.rar  exec
GraphicsProject/Debug/: vc140.idb
GraphicsProject/Debug/GraphicsProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GraphicsProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
